<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dolphin Emulator</string>
    <string name="host">app</string>
    <string name="scheme">dolphinemu</string>
    <string name="none">None</string>
    <string name="controller_0">GameCube Controller 1</string>
    <string name="controller_1">GameCube Controller 2</string>
    <string name="controller_2">GameCube Controller 3</string>
    <string name="controller_3">GameCube Controller 4</string>
    <string name="wiimote_0">Wii Remote 1</string>
    <string name="wiimote_1">Wii Remote 2</string>
    <string name="wiimote_2">Wii Remote 3</string>
    <string name="wiimote_3">Wii Remote 4</string>
    <string name="wiimote_extension_0">Wii Remote Extension 1</string>
    <string name="wiimote_extension_1">Wii Remote Extension 2</string>
    <string name="wiimote_extension_2">Wii Remote Extension 3</string>
    <string name="wiimote_extension_3">Wii Remote Extension 4</string>
    <string name="real_balance_board">Real Balance Board</string>
    <string name="wiimote">Wii Remote</string>
    <string name="wiimote_general">Buttons</string>
    <string name="wiimote_motion_simulation">Motion Simulation</string>
    <string name="wiimote_motion_input">Motion Input</string>
    <string name="wiimote_extensions">Extension</string>
    <string name="input_device">Device</string>
    <string name="input_device_all_devices">Create Mappings for Other Devices</string>
    <string name="input_device_all_devices_description">Detects inputs from all devices, not just the selected device.</string>
    <string name="input_profile">Profile</string>
    <string name="input_profiles_empty">You haven\'t created any profiles yet.</string>
    <string name="input_profiles">Profiles</string>
    <string name="input_profile_new">(New Profile)</string>
    <string name="input_profile_load">Load</string>
    <string name="input_profile_save">Save</string>
    <string name="input_profile_delete">Delete</string>
    <string name="input_profile_confirm_load">Do you want to discard your current controller settings and load the profile \"%1$s\"?</string>
    <string name="input_profile_confirm_save">Do you want to overwrite the profile \"%1$s\"?</string>
    <string name="input_profile_confirm_delete">Do you want to delete the profile \"%1$s\"?</string>
    <string name="input_reset_to_default">Default</string>
    <string name="input_reset_to_default_description">Reset settings for this controller to the default.</string>
    <string name="input_clear">Clear</string>
    <string name="input_clear_description">Clear settings for this controller.</string>
    <string name="input_reset_warning">Are you sure? Your current controller settings will be deleted.</string>
    <string name="keyboard_controller_warning">"You are configuring a \"Keyboard Controller\". This device is exclusively for \"Phantasy Star Online Episode I &amp; II\". If you are unsure, turn back now and configure a \"Standard Controller\".</string>
    <string name="old_controller_settings">Your controller settings are from an old version of Dolphin and won\'t work in this version. Press \"Default\" to start over with new settings.</string>
    <string name="input_binding">Input Binding</string>
    <string name="input_binding_description">Press or move an input to bind it to %1$s.</string>
    <string name="input_binding_no_device">You need to select a device first.</string>
    <string name="input_binding_disconnected_device">The selected device is disconnected.\n\nPlease reconnect the device or select a different device.</string>
    <string name="input_configure_input">Configure Input</string>
    <string name="input_configure_output">Configure Output</string>
    <string name="input_expression">Expression</string>
    <string name="settings">Settings</string>
    <string name="game_settings">Game Settings: %1$s</string>
    <string name="config">Config</string>
    <string name="graphics_settings">Graphics Settings</string>
    <string name="gcpad_settings">GameCube Input</string>
    <string name="gba_link_settings">GBA Link</string>
    <string name="gba_controller_0">GBA Input 1 (Port 1)</string>
    <string name="gba_controller_1">GBA Input 2 (Port 2)</string>
    <string name="gba_controller_2">GBA Input 3 (Port 3)</string>
    <string name="gba_controller_3">GBA Input 4 (Port 4)</string>
    <string name="gba_link_scale_mode">GBA Screen Scale</string>
    <string name="gba_link_scale_mode_description">Controls how the GBA image is scaled on the internal or external display.</string>
    <string name="gba_link_scale_fit">Fit, keep aspect ratio</string>
    <string name="gba_link_scale_stretch">Stretch to full screen</string>
    <string name="gba_link_scale_integer">Integer scale</string>
    <string name="gba_link_external_display">Use External Display for GBA Link</string>
    <string name="gba_link_external_display_description">Shows the active GBA Link screen on a valid external presentation display when one is connected.</string>
    <string name="gba_link_position">GBA Screen Position</string>
    <string name="gba_link_position_description">Controls where the GBA image is anchored when it does not fill the display.</string>
    <string name="gba_link_position_center">Center</string>
    <string name="gba_link_position_top">Top</string>
    <string name="gba_link_position_bottom">Bottom</string>
    <string name="gba_link_position_left">Left</string>
    <string name="gba_link_position_right">Right</string>
    <string name="gba_link_hide_touch_controls">Hide Touch Controls with Controller</string>
    <string name="gba_link_hide_touch_controls_description">Hides the on-screen GBA buttons only when the selected GBA input device is configured and connected.</string>
    <string name="gba_link_mute_audio">Mute GBA Link</string>
    <string name="gba_link_mute_audio_description">Silences audio from emulated GBA Link ports without disconnecting the GBA game.</string>
    <string name="wiimote_settings">Wii Input</string>
    <string name="general_submenu">General</string>
    <string name="dual_core">Dual Core (speedhack)</string>
    <string name="dual_core_description">Split workload to two CPU cores instead of one. Increases speed.</string>
    <string name="enable_cheats">Enable Cheats</string>
    <string name="speed_limit">Speed Limit (0% = Unlimited)</string>
    <string name="overclock_warning">WARNING: Changing this from the default (100%) WILL break games and cause glitches. Please do not report bugs that occur with a non-default clock.</string>
    <string name="achievements_submenu">RetroAchievements</string>
    <string name="gamecube_submenu">GameCube</string>
    <string name="ipl_settings">IPL Settings</string>
    <string name="skip_main_menu">Skip Main Menu</string>
    <string name="skip_main_menu_description">Put IPL ROMs in User/GC/&lt;region&gt;</string>
    <string name="device_settings">Device Settings</string>
    <string name="system_language">System Language</string>
    <string name="slot_a_device">GameCube Slot A Device</string>
    <string name="slot_b_device">GameCube Slot B Device</string>
    <string name="serial_port_1_device">GameCube Serial Port 1 Device</string>
    <string name="gba_settings">GBA Settings</string>
    <string name="gba_bios_path">BIOS</string>
    <string name="gba_bios_required_title">GBA BIOS Required</string>
    <string name="gba_bios_required_message">Configure a 16 KB GBA BIOS when an Emulated GBA port has no ROM.</string>
    <string name="configure_bios">Configure BIOS</string>
    <string name="gba_rom_1">GBA ROM 1 (Port 1)</string>
    <string name="gba_rom_2">GBA ROM 2 (Port 2)</string>
    <string name="gba_rom_3">GBA ROM 3 (Port 3)</string>
    <string name="gba_rom_4">GBA ROM 4 (Port 4)</string>
    <string name="gb_player_rom">Game Boy Player ROM</string>
    <string name="gb_player_boot_path">Game Boy Player Boot Path</string>
    <string name="gb_player_boot_path_description">Disc, DOL, or ELF used to boot Game Boy Player mode before loading the selected GBA ROM.</string>
    <string name="gb_player_boot_path_required">Set a Game Boy Player boot path before launching GBA ROMs.</string>
    <string name="gba_saves_path">Saves</string>
    <string name="wii_submenu">Wii</string>
    <string name="wii_misc_settings">Misc Settings</string>
    <string name="wii_sd_card_settings">SD Card Settings</string>
    <string name="wii_wiimote_settings">Wii Remote Settings</string>
    <string name="wii_widescreen">Widescreen</string>
    <string name="wii_widescreen_description">Changes aspect ratio from 4:3 to 16:9 in games that support it.</string>
    <string name="wii_pal60">Use PAL60 Mode (EuRGB60)</string>
    <string name="wii_pal60_description">Changes refresh rate from 50 Hz to 60 Hz in PAL games that support it.</string>
    <string name="wii_screensaver">Enable Screen Saver</string>
    <string name="user_data_new_location">Your user data (settings, saves, etc.) is stored in a location which <b>will be deleted</b> when you uninstall the app:</string>
    <string name="user_data_new_location_android_11">Because you\'re using Android 11 or newer, file manager apps can\'t access this folder in the same way as regular folders. Instead, Dolphin acts as a file provider.</string>
    <string name="user_data_open_system_file_manager">Open System File Manager</string>
    <string name="user_data_import">Import User Data</string>
    <string name="user_data_export">Export User Data</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="platform_gamecube">GameCube Games</string>
    <string name="platform_wii">Wii Games</string>
    <string name="platform_wiiware">WiiWare Games</string>
    <string name="grid_menu_settings">Settings</string>
    <string name="convert_format">Format</string>
    <string name="convert_block_size">Block Size</string>
    <string name="convert_compression">Compression</string>
    <string name="convert_compression_level">Compression Level</string>
    <string name="convert_remove_junk_data">Remove Junk Data (Irreversible)</string>
    <string name="convert_convert">Convert</string>
    <string name="pause_emulation">Pause Emulation</string>
    <string name="unpause_emulation">Unpause Emulation</string>
    <string name="emulation_screenshot">Take Screenshot</string>
    <string name="emulation_savestate">Save State</string>
    <string name="emulation_loadstate">Load State</string>
    <string name="emulation_exit">Exit Emulation</string>
    <string name="emulation_quicksave">Quick Save</string>
    <string name="emulation_quickload">Quick Load</string>
    <string name="emulation_refresh_wiimotes">Refresh Wii Remotes</string>
    <string name="emulation_overlay_controls">Overlay Controls</string>
    <string name="emulation_edit_layout">Edit Layout</string>
    <string name="emulation_toggle_controls">Toggle Controls</string>
    <string name="emulation_latching_controls">Latching Controls</string>
    <string name="emulation_control_adjustments">Adjust Controls</string>
    <string name="emulation_control_joystick_rel_center">Relative Stick Center</string>
    <string name="emulation_choose_controller">Choose Controller</string>
    <string name="emulation_touch_overlay_reset">Reset Overlay</string>
    <string name="emulation_ir_group">Touch IR Pointer</string>
    <string name="emulation_ir_recenter">Always recenter</string>
    <string name="emulation_ir_mode">IR Mode</string>
    <string name="emulation_choose_doubletap">Double tap button</string>
    <string name="emulation_change_disc">Change Disc</string>
    <string name="achievements_username">Username</string>
    <string name="achievements_password">Password</string>
    <string name="achievements_login_in_progress">Logging In</string>
    <string name="achievements_login_failed">Login Failed</string>
</resources>