<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.dolphinemu.dolphinemu.activities.EmulationActivity">

    <item
        android:id="@+id/menu_emulation_edit_layout"
        android:title="@string/emulation_edit_layout"/>

    <item
        android:id="@+id/menu_emulation_toggle_controls"
        android:title="@string/emulation_toggle_controls"/>

    <item
        android:id="@+id/menu_emulation_latching_controls"
        android:title="@string/emulation_latching_controls"/>

    <item
        android:id="@+id/menu_emulation_adjust_scale"
        android:title="@string/emulation_control_adjustments"/>

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/menu_emulation_joystick_rel_center"
            android:checkable="true"
            android:title="@string/emulation_control_joystick_rel_center"/>
    </group>

    <item
        android:id="@+id/menu_emulation_choose_controller"
        android:title="@string/emulation_choose_controller"/>

    <item
        android:id="@+id/menu_emulation_haptics"
        android:title="@string/emulation_haptics"/>

    <item
        android:id="@+id/menu_emulation_ir_group"
        android:title="@string/emulation_ir_group">
        <menu>
            <item
                android:id="@+id/menu_emulation_ir_recenter"
                android:checkable="true"
                android:title="@string/emulation_ir_recenter"/>
            <item
                android:id="@+id/menu_emulation_set_ir_mode"
                android:title="@string/emulation_ir_mode"/>
            <item
                android:id="@+id/menu_emulation_choose_doubletap"
                android:title="@string/emulation_choose_doubletap"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_emulation_reset_overlay"
        android:title="@string/emulation_touch_overlay_reset"/>

</menu>
