<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_gamecube"
        android:icon="@drawable/ic_gamecube"
        android:title="@string/platform_gamecube"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_wii"
        android:icon="@drawable/ic_wii"
        android:title="@string/platform_wii"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_wiiware"
        android:icon="@drawable/ic_folder"
        android:title="@string/platform_wiiware"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more"
        android:title="@string/more"
        app:showAsAction="always" />
</menu>
